<resources>
    <string name="app_name">goStudent</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">create account</string>
    <string name="debug_text">debug text</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="log_in_text_view">Already Have an account? Press here to log in.</string>
    <string name="login">login</string>
    <string name="go_back">Press here to go back</string>
    <string name="new_message">New message</string>

    <string name="selected_item">Select condition:</string>
    <string-array name="conditions">
        <item>New</item>
        <item>Used</item>
        <item>Fair</item>
    </string-array>
    <string name="title_activity_navbar">NavbarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>